--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ ul,li{
 /* ------------------banner 开始-------------------------------*/
 .banner img{
 	width: 100%;
-	background: url("../img/banner1.jpg") no-repeat;
+	background: no-repeat;
 	background-size: 100%;
 }
 .swiper-container{
